# Magnetic-Moment-vs-Angular-Momentum

./: .gitignore  CMakeLists.txt  README.md  config.ini  dmu.csv  fs89229.csv  job.sh  main  main.2022-05-17_10:39:17  main.2022-05-17_11:24:28  main.2022-05-25_00:10:00  main.2022-05-25_00:11:37  main.2022-05-29_09:02:25  main.2022-06-30_20:58:52  main.2022-06-30_21:11:36  main.2022-06-30_21:12:15  makefile  nohup.out  run.2022-05-17_11:24:28  run.2022-05-25_00:10:00  run.2022-05-25_00:11:37  run.2022-05-29_09:02:25  run.2022-06-30_20:58:52  run.2022-06-30_21:11:36  run.2022-06-30_21:12:15  run.sh  self_energy_L1band_index2_mu0.000000.csv  self_energy_L1band_index6_mu0.000000.csv  self_energy_L2band_index2_mu0.000000.csv  self_energy_L2band_index6_mu0.000000.csv  self_energy_L3band_index2_mu0.000000.csv  self_energy_L3band_index6_mu0.000000.csv  self_energy_T-band_index4_mu0.000000.csv  sphere.off  spin_conductivity2_L1band_index0_mu-0.037000.csv  spin_conductivity2_L1band_index0_mu-0.038495.csv  spin_conductivity2_L1band_index0_mu-0.039185.csv  spin_conductivity2_L1band_index0_mu-0.039278.csv  spin_conductivity2_L1band_index0_mu-0.039378.csv  spin_conductivity2_L1band_index0_mu-0.039420.csv  (+301 more)
backup/: load_ini.cpp
dat/: DOS_isotropic_minus.csv  DOS_isotropic_plus.csv  L0_band0k0.csv  L0_band0k1.csv  L0_band0k2.csv  L0_band0k3.csv  L0_band0k4.csv  L0_band0k5.csv  L0_band0k6.csv  L0_band0k7.csv  L0_band0k8.csv  L0_band0k9.csv  L0_band1k0.csv  L0_band1k1.csv  L0_band1k2.csv  L0_band1k3.csv  L0_band1k4.csv  L0_band1k5.csv  L0_band1k6.csv  L0_band1k7.csv  L0_band1k8.csv  L0_band1k9.csv  L0_band2k5.csv  L0_band2k6.csv  L0_band2k7.csv  L0_band2k8.csv  L0_band2k9.csv  L0_band3k5.csv  L0_band3k6.csv  L0_band3k7.csv  L0_band3k8.csv  L0_band3k9.csv  L1_band0k0.csv  L1_band0k1.csv  L1_band0k2.csv  L1_band0k3.csv  L1_band0k4.csv  L1_band0k5.csv  L1_band0k6.csv  L1_band0k7.csv  (+273 more)
header/: parameters.hpp
include/: parameters.hpp
lib/: CMakeLists.txt  band.cpp  cgal.cpp  dispersion.cpp  fermi_surface.cpp  green_function.cpp  hamiltonian.cpp  initialize.cpp  response.cpp  self_energy.cpp  spin_hall_conductivity.cpp  system.cpp
lib/izaki_Bi_SPH_I8/: memo
lib/izaki_Bi_SPH_sigma_data/: memo
lib/spin/: spin_L1_x.csv  spin_L1_y.csv  spin_L1_z.csv  spin_L2_x.csv  spin_L2_y.csv  spin_L2_z.csv  spin_L3_x.csv  spin_L3_y.csv  spin_L3_z.csv  spin_T_x.csv  spin_T_y.csv  spin_T_z.csv
py/: bz-2.py  bz.py  check.py  crystal-orientation.py  cutoff-dependence.py  damping_dependence.py  dispersion.py  dos.py  effective_dispersion.py  fermi_surface.py  for_paper.py  get_triangles.py  lifetime.py  output.py  plot_surface.py  response-L.py  response-T.py  response-isotropic.py  response.py  rotate.py
src/: CMakeLists.txt  main.cpp
tri/: triangles_L1-mu-0.000016.csv_check.csv  triangles_L1-mu-0.000016.csv_face.csv  triangles_L1-mu-0.000016.csv_vertex.csv  triangles_L1-mu-0.000038.csv_check.csv  triangles_L1-mu-0.000038.csv_face.csv  triangles_L1-mu-0.000038.csv_vertex.csv  triangles_L1-mu-0.000066.csv_check.csv  triangles_L1-mu-0.000066.csv_face.csv  triangles_L1-mu-0.000066.csv_vertex.csv  triangles_L1-mu-0.000104.csv_check.csv  triangles_L1-mu-0.000104.csv_face.csv  triangles_L1-mu-0.000104.csv_vertex.csv  triangles_L1-mu-0.000153.csv_check.csv  triangles_L1-mu-0.000153.csv_face.csv  triangles_L1-mu-0.000153.csv_vertex.csv  triangles_L1-mu-0.000216.csv_check.csv  triangles_L1-mu-0.000216.csv_face.csv  triangles_L1-mu-0.000216.csv_vertex.csv  triangles_L1-mu-0.000296.csv_check.csv  triangles_L1-mu-0.000296.csv_face.csv  triangles_L1-mu-0.000296.csv_vertex.csv  triangles_L1-mu-0.000399.csv_check.csv  triangles_L1-mu-0.000399.csv_face.csv  triangles_L1-mu-0.000399.csv_vertex.csv  (+138 more)
(+5367 files in other folders)
