cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "release")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_COMPILER "g++")
set(MKL_DIR "/opt/intel/mkl/")
project(bismuth CXX)
find_package(CGAL)
find_package(MKL CONFIG REQUIRED)
find_package(CGAL REQUIRED COMPONENTS Qt5 Core)
add_subdirectory(src)
add_subdirectory(lib)

