cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "release")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_COMPILER "g++")
set(MKL_DIR "/home/fujimoto/intel/mkl/")
project(bismuth CXX C)
find_package(Threads REQUIRED)
find_package(CGAL QUIET COMPONENTS)
if ( NOT CGAL_FOUND )
  message(STATUS "This project requires the CGAL library, and will not be compiled.")
  return()
endif()
#set(BOOST_ROOT       "/home/fujimoto/.sh/boost")
#set(BOOST_INCLUDEDIR "/home/fujimoto/.sh/boost")
#set(BOOST_LIBRARYDIR "/home/fujimoto/.sh/boost")
#find_package(Boost 1.79 REQUIRED)
find_package(Boost REQUIRED)
#INCLUDE_DIRECTORIES(${BOOST_INCLUDEDIR})
if ( NOT Boost_FOUND )
  message(STATUS "This project requires the Boost library, and will not be compiled.")
  return()
endif()

#find_package(MKL CONFIG REQUIRED)
find_package(LAPACK REQUIRED)
include_directories(BEFORE include)
add_subdirectory(src)
add_subdirectory(lib)

add_to_cached_list(CGAL_EXECUTABLE_TARGETS main)
target_link_libraries(main PRIVATE CGAL::CGAL)
target_link_libraries(main PRIVATE Threads::Threads)
target_link_libraries(main PRIVATE LAPACK::LAPACK)
